Added: assembly to machine translation

--- a/mat.html
+++ b/mat.html
@@ -19,12 +19,12 @@
         <button id='submit'>Submit</button> 
         <div id='output'></div> <!--Output result-->
         <div class='record' style='display:flex'> <!--Record Column Names-->
-            <div style='margin-right:20px; width: 50px'>No.</div>
-            <div style='margin-right:20px; width: 100px'>Assembly</div>
+            <div style='margin-right:20px; width: 100px'>No.</div>
+            <div style='margin-right:20px; width: 150px'>Assembly</div>
             <div style='margin-right:20px; width: 150px'>Instruction</div>
             <div style='margin-right:20px; width: 400px'>Binary</div>
-            <div style='width: 100px'>Hexadecimal</div>
-        <div>
+            <div style='width: auto'>Hexadecimal</div>
+        </div>
         <div id='record'></div> <!--Record-->
     </body>
 </html>
