--- a/mat.html
+++ b/mat.html
@@ -15,6 +15,7 @@
                 <button id='c'>Machine (Hexadecimal)</button>
             </div>
         </div>
+        <div id='note'></div>
         <input id='input' type='text'/> <!--Input field-->
         <button id='submit'>Submit</button> 
         <div id='output'></div> <!--Output result-->
